# ic3d

./: .gitignore  .releaserc.yaml  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  Taskfile.yml  tarpaulin.toml
.github/workflows/: release.yaml  test.yaml
examples/: crystal.rs  gizmo.rs  gizmo_manual.rs  gizmo_manual_draggable.rs  gizmo_manual_interactive.rs  showcase.rs  showcase_advanced.rs  transparent.rs
examples/shaders/: crystal.wgsl
shaders/: blinn_phong.wgsl  debug_blinn_phong.wgsl  flat_color.wgsl  scene_uniforms.wgsl  shadow_pass.wgsl  shadow_pcf.wgsl  standard_vs.wgsl  vertex_io.wgsl
src/: buffer.rs  custom_uniforms.rs  debug.rs  gpu_types.rs  gpu_types_tests.rs  lib.rs  math.rs  math_tests.rs  pipeline.rs  post_process.rs  scene.rs  scene_tests.rs  shaders.rs  shaders_tests.rs  shadow.rs  svg.rs  transform.rs  utils.rs  utils_tests.rs  widget.rs
src/camera/: camera_tests.rs  mod.rs  orthographic.rs  orthographic_tests.rs  perspective.rs  perspective_tests.rs
src/gizmo/: handler.rs  input.rs  mod.rs  mod_tests.rs  rotate.rs  translate.rs  types.rs
src/graph/: graph_tests.rs  material.rs  mod.rs  node.rs  node_builder.rs  rendering.rs  scene_camera.rs  scene_light.rs
src/light/: directional.rs  directional_tests.rs  mod.rs  point.rs  point_tests.rs  spot.rs  spot_tests.rs
src/math/: curve.rs  curve_tests.rs  distance.rs  distance_tests.rs  easing.rs  easing_tests.rs  hash.rs  hash_tests.rs  hex_grid.rs  hex_grid_tests.rs  interp.rs  interp_tests.rs  mod.rs  ray.rs  ray_tests.rs  rotation.rs  rotation_tests.rs  screen.rs  screen_tests.rs
src/mesh/: arrow.rs  arrow_tests.rs  cone.rs  cone_tests.rs  cube.rs  cube_tests.rs  cylinder.rs  cylinder_tests.rs  hex_column.rs  hex_column_tests.rs  mesh_tests.rs  mod.rs  plane.rs  plane_tests.rs  sphere.rs  sphere_tests.rs  svg.rs  svg_tests.rs  torus.rs  torus_tests.rs
src/overlay/: base.rs  base_tests.rs  draggable.rs  draggable_tests.rs  interactive.rs  interactive_tests.rs  mod.rs
src/pipeline/: buffer_tests.rs  debug.rs  debug_tests.rs  gpu_types.rs  mod.rs  render_pipeline.rs  shaders.rs  shaders_tests.rs  shadow.rs  utils.rs  utils_tests.rs
src/scene/: builder.rs  builder_tests.rs  context.rs  context_tests.rs  mod.rs  object.rs  object_tests.rs  transform.rs  transform_tests.rs
src/widget/: mod.rs  program.rs  (+2 more)
tests/: gpu_buffer_tests.rs  gpu_custom_uniforms_tests.rs  gpu_helper.rs  gpu_pipeline_tests.rs  gpu_shadow_tests.rs
