[package]
name = "iced3d"
version = "1.0.0"
edition = "2021"
description = "Lightweight 3D instanced rendering for iced applications"
license = "GPL-3.0-only"
repository = "https://github.com/playtron-os/iced3d"

[dependencies]
glam = "0.29"
bytemuck = { version = "1.14", features = ["derive"] }
earcutr = "0.4"

[dependencies.iced]
git = "https://github.com/playtron-os/iced.git"
default-features = false
features = ["wgpu", "x11", "wayland", "tokio"]

[dependencies.wgpu]
git = "https://github.com/playtron-os/wgpu.git"
rev = "f28c5f92e"
default-features = false
features = ["std", "wgsl"]

[features]
default = []
debug = []
vulkan = ["wgpu/vulkan"]

[dev-dependencies]
pollster = "0.4"
bytemuck = "1.14"

[lints.rust]
unsafe_code = "forbid"

[[example]]
name = "showcase"
path = "examples/showcase.rs"
required-features = ["debug"]
