[package]
name = "ic3d"
version = "1.3.0"
edition = "2021"
description = "Lightweight 3D instanced rendering for iced applications"
license = "GPL-3.0-only"
repository = "https://github.com/playtron-os/ic3d"

[dependencies]
glam = "0.29"
bytemuck = { version = "1.14", features = ["derive"] }
earcutr = "0.4"
parking_lot = "0.12"
tracing = "0.1"

[dependencies.iced]
git = "https://github.com/playtron-os/iced.git"
default-features = false
features = ["wgpu", "x11", "wayland", "tokio"]

[dependencies.wgpu]
git = "https://github.com/playtron-os/wgpu.git"
rev = "f28c5f92e"
default-features = false
features = ["std", "wgsl"]

[features]
default = []
debug = []
vulkan = ["wgpu/vulkan"]

[dev-dependencies]
pollster = "0.4"
bytemuck = "1.14"
tracing-subscriber = "0.3"

[lints.rust]
unsafe_code = "forbid"

[[example]]
name = "showcase"
path = "examples/showcase.rs"

[[example]]
name = "gizmo"
path = "examples/gizmo.rs"

[[example]]
name = "gizmo_manual_draggable"
path = "examples/gizmo_manual_draggable.rs"

[[example]]
name = "gizmo_manual_interactive"
path = "examples/gizmo_manual_interactive.rs"

[[example]]
name = "showcase_advanced"
path = "examples/showcase_advanced.rs"
required-features = ["debug"]

[[example]]
name = "crystal"
path = "examples/crystal.rs"

[[example]]
name = "transparent"
path = "examples/transparent.rs"

#[patch."https://github.com/playtron-os/iced.git"]
#iced = { path = "../iced" }
#iced_wgpu = { path = "../iced/wgpu" }
#iced_winit = { path = "../iced/winit" }
